@@ -48,9 +48,7 @@ public class PigQueryServer {
 	 * @throws Exception
 	 */
 	public static void start() throws Exception {
-		ExecutorService executors = Executors.newFixedThreadPool(Integer.parseInt(DataSamudayaProperties.get()
-				.getProperty(DataSamudayaConstants.VIRTUALTHREADSPOOLSIZE,
-						DataSamudayaConstants.VIRTUALTHREADSPOOLSIZE_DEFAULT)), Thread.ofVirtual().factory());
+		ExecutorService executors = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("PigQueryServer-", 0).factory());
 		serverSocket = new ServerSocket(Integer.valueOf(DataSamudayaProperties.get()
 				.getProperty(DataSamudayaConstants.PIGPORT, DataSamudayaConstants.PIGPORT_DEFAULT)));
 		queryParserDriver = PigUtils.getQueryParserDriver("pig");
