@@ -123,9 +123,7 @@ public class MapReduceYarnContainer extends AbstractIntegrationYarnContainer {
 								}
 							}
 
-							var es = Executors.newFixedThreadPool(Integer.parseInt(DataSamudayaProperties.get()
-									.getProperty(DataSamudayaConstants.VIRTUALTHREADSPOOLSIZE,
-											DataSamudayaConstants.VIRTUALTHREADSPOOLSIZE_DEFAULT)), Thread.ofVirtual().factory());
+							var es = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("MapReduceYarnContainer-", 0).factory());
 							var datasamudayamc = new MapperCombinerExecutor(
 									mc.blockslocation, CacheUtils.getBlockData(mc.blockslocation, hdfs), cm, cc);
 							var fc = (Future<Context>) es.submit(datasamudayamc);
@@ -147,9 +145,7 @@ public class MapReduceYarnContainer extends AbstractIntegrationYarnContainer {
 						var complete = new DataCruncherContext();
 						var apptaskcontextmap = new ConcurrentHashMap<String, Context>();
 						Context currentctx;
-						var es = Executors.newFixedThreadPool(Integer.parseInt(DataSamudayaProperties.get()
-								.getProperty(DataSamudayaConstants.VIRTUALTHREADSPOOLSIZE,
-										DataSamudayaConstants.VIRTUALTHREADSPOOLSIZE_DEFAULT)), Thread.ofVirtual().factory());
+						var es = Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("MapReduceYarnContainer-", 0).factory());
 						for (var tuple2 : (List<Tuple2>) red.tuples) {
 							var ctx = new DataCruncherContext();
 							for (var apptaskids : (Collection<String>) tuple2.v2) {
